# low_lever_web_server_py

./: .gitignore  README.md  docker-compose.yml  dockerfile  models.py  new_server.py  pyproject.toml  shourtcats_posgtres.txt  test_serv.py
cordova/Docker/: docker-compose.yml
cordova/Docker/CordovaDockerFile/: Dockerfile  android.packages
cordova/mobile-app/: config.xml  eslint.config.mjs  package-lock.json
cordova/mobile-app/plugins/: fetch.json
cordova/mobile-app/www/js/: index.js
mobile-app/: config.xml  runAndroid
mobile-app/res/: network_security_config.xml
mobile-app/www/js/: index.js
www/: index.html
www/.well-known/acme-challenge/: D66pQB9Xu3FMb1uNcMaTMHrV4TZKrRCfw-9su6RgejE
